@@ -12,6 +12,7 @@ Agregada opción de configuración para autoactivar chip AY en modelos de Spectr
 Agregado emulación de Stack Light Rifle
 Agregado emulación de Defender Light Gun
 Agregada emulación de Trojan Light Pen
+Agregada emulación de Datel Lightwriter
 Agregada mirilla de lightgun
 
 Mejorado ZX Vision:
