@@ -184,7 +184,7 @@
 
 * Emulación de ZX Printer
 
-* Emulación de Entrada Óptica: Emula Gunstick de MHT Ingenieros S.L, Magnum Light Phaser, Stack Light Rifle, Defender Light Gun, Trojan Light Pen
+* Emulación de Entrada Óptica: Emula Gunstick de MHT Ingenieros S.L, Magnum Light Phaser, Stack Light Rifle, Defender Light Gun, Trojan Light Pen, Datel Lightwriter
 
 * Emulación Kempston mouse
 
