@@ -12,6 +12,7 @@ Added config setting for autoenable ay chip on Spectrum models without ay chip
 Added emulation of Stack Light Rifle
 Added emulation of Defender Light Gun
 Added emulation of Trojan Light Pen
+Added emulation of Datel Lightwriter
 Added lightgun scope
 
 Improved ZX Vision:
